--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Biscoito da Sorte</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  
-</body>
+<html lang="pt-br">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biscoito da Sorte</title>
+    <link rel="stylesheet" href="style.css" />
+
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz@0,9..40;1,9..40&family=Dancing+Script&family=Montserrat:ital,wght@0,700;1,700&display=swap" rel="stylesheet">  </head>
+  <body>
+    <main>
+      <div class="screen1 hide">
+        <h1>Qual é a sua sorte de hoje?</h1>
+        <p>Abra o biscoito e descubra!</p>
+        <img src="./assests/fortune-cookie.svg" alt="imagem de biscoito da sorte">
+      </div>
+
+      <div class="screen2">
+        <h1>Aqui está a sua sorte de hoje:</h1>
+        <p>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
+        <img src="./assests/OpenedFortuneCookie.svg" alt="imagem de biscoito da sorte">
+        <button>Abrir outro biscoito</button>
+      </div>
+    </main>
+  </body>
 </html>
