--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="screen2">
         <h1>Aqui está a sua sorte de hoje:</h1>
         <p>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</p>
-        <img src="./assests/OpenedFortuneCookie.svg" alt="imagem de biscoito da sorte">
+        <img src="./assests/OpenedFortuneCookie.svg" alt="imagem do biscoito da sorte aberto">
         <button>Abrir outro biscoito</button>
       </div>
     </main>
